[gd_scene load_steps=23 format=2]

[ext_resource path="res://scripts/Game/player.gd" type="Script" id=1]
[ext_resource path="res://medias/gfx/static/square.png" type="Texture" id=2]
[ext_resource path="res://medias/gfx/static/bob.png" type="Texture" id=3]
[ext_resource path="res://medias/sfx/jump.wav" type="AudioStream" id=4]
[ext_resource path="res://medias/sfx/walljump.wav" type="AudioStream" id=5]

[sub_resource type="Gradient" id=1]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.223864 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
flag_disable_z = true
gravity = Vector3( 0, 800, 0 )
angular_velocity = 500.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 32.0
scale_curve = SubResource( 4 )
color_ramp = SubResource( 2 )

[sub_resource type="Gradient" id=6]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=7]
gradient = SubResource( 6 )

[sub_resource type="Curve" id=8]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.136364, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.374086 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=9]
curve = SubResource( 8 )

[sub_resource type="ParticlesMaterial" id=10]
emission_shape = 2
emission_box_extents = Vector3( 24, 24, 1 )
flag_disable_z = true
gravity = Vector3( 0, 98, 0 )
angular_velocity = 250.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 48.0
scale_random = 0.5
scale_curve = SubResource( 9 )
color_ramp = SubResource( 7 )

[sub_resource type="ConvexPolygonShape2D" id=11]
points = PoolVector2Array( -30, -23, -23, -30, 23, -30, 30, -23, 30, 23, 23, 30, -23, 30, -30, 23 )

[sub_resource type="Animation" id=12]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 0.4, 0.5 ), Vector2( 0.5, 0.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite1:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.35, 0.45 ), Vector2( 0.45, 0.45 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Camera2D:zoom")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.95, 1 ), Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Camera2D:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=13]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Color( 0.784314, 0.784314, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 0.6, 0.6 ), Vector2( 0.5, 0.5 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite1:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 0.55, 0.55 ), Vector2( 0.45, 0.45 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Camera2D:zoom")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.9, 0.9 ), Vector2( 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Camera2D:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=14]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Color( 0.784314, 0.784314, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 0.6, 0.6 ), Vector2( 0.5, 0.5 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite1:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 0.45, 0.45 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Camera2D:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 0.25 ),
"update": 0,
"values": [ 4.0, 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Camera2D:zoom")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 0.95 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=15]
length = 0.15
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 90.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite1:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -90.0 ]
}

[sub_resource type="Animation" id=16]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 4, 1 ),
"update": 0,
"values": [ Vector2( 0.01, 0.01 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Camera2D:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ -360.0, 0.0 ]
}

[sub_resource type="Animation" id=17]
length = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 0.01, 0.01 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Camera2D:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 0.5 ),
"update": 1,
"values": [ -360.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Camera2D:drag_margin_left")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Camera2D:drag_margin_top")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Camera2D:drag_margin_right")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0.0 ]
}

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Particles2D" type="Particles2D" parent="."]
modulate = Color( 0.760784, 0.988235, 1, 0.588235 )
position = Vector2( 0, 12 )
emitting = false
lifetime = 0.3
local_coords = false
process_material = SubResource( 5 )
texture = ExtResource( 2 )

[node name="Impulsion" type="Particles2D" parent="."]
modulate = Color( 0, 0.60675, 1, 0.392157 )
position = Vector2( 0, 28 )
emitting = false
amount = 32
lifetime = 0.5
one_shot = true
explosiveness = 0.5
local_coords = false
process_material = SubResource( 10 )
texture = ExtResource( 2 )

[node name="Sprite1" type="Sprite" parent="."]
modulate = Color( 0.862745, 0.862745, 0.862745, 1 )
scale = Vector2( 0.45, 0.45 )
texture = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="Shape" type="CollisionShape2D" parent="."]
shape = SubResource( 11 )

[node name="Camera2D" type="Camera2D" parent="."]
rotation = -4.46638e-06
rotating = true
current = true
zoom = Vector2( 0.01, 0.01 )
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_speed = 10.0
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0

[node name="rays" type="Node2D" parent="."]

[node name="top" type="RayCast2D" parent="rays"]
position = Vector2( -22, -28 )
enabled = true
cast_to = Vector2( 0, -8 )

[node name="top2" type="RayCast2D" parent="rays"]
position = Vector2( 22, -28 )
enabled = true
cast_to = Vector2( 0, -8 )

[node name="ground" type="RayCast2D" parent="rays"]
position = Vector2( -22, 28 )
enabled = true
cast_to = Vector2( 0, 12 )

[node name="ground2" type="RayCast2D" parent="rays"]
position = Vector2( 22, 28 )
enabled = true
cast_to = Vector2( 0, 12 )

[node name="left" type="RayCast2D" parent="rays"]
position = Vector2( -28, 22 )
enabled = true
cast_to = Vector2( -14, 0 )

[node name="left2" type="RayCast2D" parent="rays"]
position = Vector2( -28, -22 )
enabled = true
cast_to = Vector2( -14, 0 )

[node name="right" type="RayCast2D" parent="rays"]
position = Vector2( 28, 22 )
enabled = true
cast_to = Vector2( 14, 0 )

[node name="right2" type="RayCast2D" parent="rays"]
position = Vector2( 28, -22 )
enabled = true
cast_to = Vector2( 14, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/jump = SubResource( 12 )
anims/jumppad = SubResource( 13 )
anims/walljump = SubResource( 14 )

[node name="Walking" type="AnimationPlayer" parent="."]
anims/idle = SubResource( 15 )

[node name="Enter" type="AnimationPlayer" parent="."]
anims/enter = SubResource( 16 )
anims/exit = SubResource( 17 )

[node name="jump" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -8.0

[node name="walljump" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -5.0
